setup components and root configurations

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+/* Reset básico e fontes globais */
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  font-family: 'Inter', 'Poppins', sans-serif;
+  background-color: #FFFFFF;
+  color: #333333;
+}
