Add other components and adjusting style and HTML

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer class="footer-container">
+  <div class="footer-links">
+    <a href="#">Termos de uso</a>
+    <a href="#">Política de privacidade</a>
+    <a href="#">Contato</a>
+    <a href="#">FAQ</a>
+  </div>
+  <div class="footer-company">
+    © 2025 Parcelando Tudo. Todos os direitos reservados.
+  </div>
+</footer>
