--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<header class="header-container">
+  <!-- Logotipo da Parcelando Tudo -->
+  <div class="logo">
+    <img src="../../../../assets/images/logo.svg" alt="Logo da empresa Parcelando Tudo">
+  </div>
+  <!-- Links de navegação -->
+  <nav class="nav-links">
+    <a href="#">Como funciona</a>
+    <a href="#">Ajuda</a>
+  </nav>
+</header>
