--- a/src/app/shared/components/whatsapp-button/whatsapp-button.component.html
+++ b/src/app/shared/components/whatsapp-button/whatsapp-button.component.html
@@ -1,1 +1,9 @@
-<p>whatsapp-button works!</p>
+<div class="whatsapp-button">
+  <div class="circle">
+    <a href="https://wa.me/5511999999999" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
+  <!-- Rótulo exibido no hover -->
+  <div class="help-label">Precisa de ajuda? Fale com a gente</div>
+</div>
