--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,11 +1,23 @@
 <footer class="footer-container">
-  <div class="footer-links">
-    <a href="#">Termos de uso</a>
-    <a href="#">Política de privacidade</a>
-    <a href="#">Contato</a>
-    <a href="#">FAQ</a>
-  </div>
-  <div class="footer-company">
-    © 2025 Parcelando Tudo. Todos os direitos reservados.
+  <div class="footer-inner">
+    <div class="footer-brand">
+      <img src="../../../../assets/images/logo.svg" alt="Logo Parcelando Tudo">
+      <p>Facilitamos o pagamento de tributos e taxas com opções de parcelamento seguras e sem burocracia.</p>
+    </div>
+
+    <div class="footer-links">
+      <h4>Links Rápidos</h4>
+      <a href="#">Como funciona</a>
+      <a href="#">Sobre nós</a>
+      <a href="#">FAQ</a>
+      <a href="#">Contato</a>
+    </div>
+
+    <div class="footer-links">
+      <h4>Informações Legais</h4>
+      <a href="#">Termos de uso</a>
+      <a href="#">Política de privacidade</a>
+      <a href="#">Segurança</a>
+    </div>
   </div>
 </footer>
