--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,11 +1,12 @@
 <header class="header-container">
-  <!-- Logotipo da Parcelando Tudo -->
-  <div class="logo">
-    <img src="../../../../assets/images/logo.svg" alt="Logo da empresa Parcelando Tudo">
+  <div class="header-inner">
+    <div class="logo">
+      <img src="../../../../assets/images/logo.svg" alt="Logo da empresa Parcelando Tudo">
+    </div>
+
+    <nav class="nav-links">
+      <a href="#">Como funciona</a>
+      <a href="#">Ajuda</a>
+    </nav>
   </div>
-  <!-- Links de navegação -->
-  <nav class="nav-links">
-    <a href="#">Como funciona</a>
-    <a href="#">Ajuda</a>
-  </nav>
 </header>
