--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,12 @@
-/* Reset básico e fontes globais */
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-family: 'Inter', 'Poppins', sans-serif;
-  background-color: #FFFFFF;
-  color: #333333;
+  background-color: #ffffff;
+  color: #0f172a;
+  line-height: 1.6;
+  -webkit-font-smoothing: antialiased;
 }
