--- a/src/app/core/components/barcode-form/barcode-form.component.html
+++ b/src/app/core/components/barcode-form/barcode-form.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="badge-row">
-    <div class="badge">
+    <div class="badge pci-badge">
       <i class="fa-solid fa-shield-halved pci-icon"></i>
       <div class="badge-text">
         <strong>PCI DSS</strong>
