--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -13,11 +13,19 @@
       <a href="#">Contato</a>
     </div>
 
+    <div class="footer-separator" aria-hidden="true"></div>
+
     <div class="footer-links">
       <h4>Informações Legais</h4>
       <a href="#">Termos de uso</a>
       <a href="#">Política de privacidade</a>
       <a href="#">Segurança</a>
     </div>
+  </div>
+
+  <hr class="footer-divider" />
+
+  <div class="footer-credits">
+    © 2025 Parcelando Tudo. Todos os direitos reservados. Facilitamos seus pagamentos com segurança e transparência.
   </div>
 </footer>
