--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   background-color: #ffffff;
-  border-bottom: 1px solid #eef1f6;
+  border-bottom: 1.5px solid #e0e0e0;
   padding: 12px 28px;
   z-index: 1000;
 }
