--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,12 @@
 <section class="hero-section">
+  <div class="metrics-ribbon">
+    <span class="badge-highlight">
+      <i class="fa-solid fa-arrow-trend-up"></i>
+      + {{ displayedAmount | currency:'BRL':'symbol':'1.0-0' }}/mês
+    </span>
+    <p>Processamos pagamentos em todos os estados do Brasil, com credenciamento nacional.</p>
+  </div>
+
   <div class="hero-inner">
     <div class="text-section">
       <h1>
