Modify price language and other things

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -21,6 +21,18 @@
       <a href="#">Política de privacidade</a>
       <a href="#">Segurança</a>
     </div>
+
+    <div class="footer-links">
+      <h4>Suporte</h4>
+      <a href="tel:+551152398158"><i class="fa-solid fa-phone"></i> (11) 5239-8158</a>
+      <a href="mailto:suporte@parcelandotudo.com.br"><i class="fa-solid fa-envelope"></i> suporte@parcelandotudo.com.br</a>
+      <a href="https://instagram.com/parcelando.tudo" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-instagram"></i> @parcelando.tudo
+      </a>
+      <a href="https://wa.me/551152398158" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-whatsapp"></i> WhatsApp
+      </a>
+    </div>
   </div>
 
   <hr class="footer-divider" />
