--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,6 +22,15 @@
     <div class="form-section">
       <app-barcode-form></app-barcode-form>
     </div>
+
+    <div class="hero-illustration-wrap">
+      <img
+        class="hero-illustration"
+        src="assets/images/314177.jpg"
+        alt="Ilustração de pagamento seguro"
+        loading="lazy"
+      />
+    </div>
   </div>
 </section>
 
