Alter image name

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
     <div class="hero-illustration-wrap">
       <img
         class="hero-illustration"
-        src="assets/images/314177.jpg"
+        src="assets/images/person-phone.jpg"
         alt="Ilustração de pagamento seguro"
         loading="lazy"
       />
