--- a/src/app/core/components/barcode-form/barcode-form.component.scss
+++ b/src/app/core/components/barcode-form/barcode-form.component.scss
@@ -153,6 +153,11 @@
   font-size: 0.7rem;
 }
 
+.badge-sentinel {
+  width: 100%;
+  height: 1px;
+}
+
 .badge-row {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
